--- a/zsh/README
+++ b/zsh/README
@@ -4,7 +4,7 @@
    #google for "oh my zsh", click the first link and follow the steps - https://github.com/robbyrussell/oh-my-zsh
 3. curl -L https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh | sh
 
-4. link ~/.zshrc to ~/access-UK/zshrc
+4. link ~/.zshrc to ~/access-UK/zsh/zshrc
 
 5. cd ~/access-UK/git/
    curl https://github.com/git/git/raw/master/contrib/completion/git-completion.zsh -OL
@@ -13,9 +13,10 @@
 
 6. Create the below soft links (vim to use bundle)
     $ls -lart .vimrc
-    lrwxrwxrwx 1 udayakut udayakut 37 May 29 17:21 .vimrc -> /home/udayakut/access-UK/vundle_vimrc*
+    lrwxrwxrwx 1 udayakut udayakut 37 May 29 17:21 .vimrc -> /home/udayakut/access-UK/vim/vimfiles/vundle_vimrc*
+    $mkdir ~/vimbundle; #Now open vim and give :PluginInstall
     $ ls -lart .vim
-    lrwxrwxrwx 1 udayakut udayakut 35 May 29 17:22 .vim -> /home/udayakut/access-UK/vimbundle/
+    lrwxrwxrwx 1 udayakut udayakut 35 May 29 17:22 .vim -> /home/udayakut/vimbundle/
 
 7. Install autojump following instructions in the below webpage
    https://github.com/joelthelion/autojump
