--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-1. ln -s ~/access-UK/vim/vimfiles/vundle_vimrc .vimrc; mkdir ~/vimbundle; ln -s /home/udayakut/vimbundle .vim; Then open vim and give ::PluginInstall
+1. ln -s ~/access-UK/vim/vimfiles/vundle_vimrc .vimrc; 
+   mkdir ~/access-UK/vimbundle; 
+   ln -s /home/udayakut/access-UK/vimbundle .vim; 
+   git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim;
+   Then open vim and give :PluginInstall
 
 2. ln -s ~/access-UK/bash/bashrc .bashrc; ln -s ~/access-UK/bash/bashrc.local .bashrc.local; ln -s ~/access-UK/bash/bash_profile .bash_profile; ln -s ~/access-UK/bash/aliases_bash .aliases_bash;
 
