--- a/README
+++ b/README
@@ -4,7 +4,7 @@
    git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim;
    Then open vim and give :PluginInstall
 
-2. ln -s ~/access-UK/bash/bashrc .bashrc; ln -s ~/access-UK/bash/bashrc.local_for_zsh .bashrc.local; ln -s ~/access-UK/bash/bash_profile .bash_profile; ln -s ~/access-UK/bash/aliases_bash .aliases_bash;
+2. ln -s ~/access-UK/bash/bashrc .bashrc; ln -s ~/access-UK/bash/bashrc.local .bashrc.local; ln -s ~/access-UK/bash/bash_profile .bash_profile; ln -s ~/access-UK/bash/aliases_bash .aliases_bash;
 
 3. ln -s /home/udayakut/access-UK/zsh/zshrc .zshrc
 
