--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 1. ln -s ~/access-UK/vim/vimfiles/vundle_vimrc .vimrc; 
-   mkdir ~/access-UK/vimbundle; 
-   ln -s /home/udayakut/access-UK/vimbundle .vim; 
+   mkdir ~/access-UK/vim/vimbundle; 
+   ln -s /home/udayakut/access-UK/vim/vimbundle .vim; 
    git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim;
    Then open vim and give :PluginInstall
 
