--- a/README
+++ b/README
@@ -4,7 +4,16 @@
    git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim;
    Then open vim and give :PluginInstall
 
-   Note: Buffexplorer has an issue - https://github.com/jlanzarotta/bufexplorer/issues/37#issuecomment-119613896 (see comments by shaakaud). Fix is
+   Note: Buffexplorer has an issue - https://github.com/jlanzarotta/bufexplorer/issues/37#issuecomment-119613896 (see comments by shaakaud). Fix is to do either of the below options (preferably option 1).
+
+   Option 1:
+   a. go to ~/.vim/bundle/buffexlorer/plugin. Do git apply ~/access-UK/vim/vim_bundle_bufexplorer.diff
+   b. Also, i see that the latest bufexlorer plugin does not work with VIM version < 7.3. Get older version tag and checkout that version.
+      go to ~/.vim/bundle/bufexplorer. Do "git tag -l". Get a older version and do "git checkout <tag>"
+      As of now, i see v7.4.6 works with VIM 7.2 (beyond which it requires vim 7.3) and also this version already has the fix for the issue 
+      i reported (so no need to do git apply step a)
+
+   Option 2:
    a. Open ~/access-UK/vim/vimbundle/bundle/bufexplorer/plugin/bufexplorer.vim.
    b. search for s:MapKeys function implementation
    c. In that function, you can see several lines starting with "nnoremap <script> <silent> <nowait> <buffer> .."
