--- a/zsh/README
+++ b/zsh/README
@@ -4,7 +4,7 @@
    #google for "oh my zsh", click the first link and follow the steps - https://github.com/robbyrussell/oh-my-zsh
 3. curl -L https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh | sh
 
-4. link ~/.zshrc to ~/access-UK/zsh/zshrc -> ln -s /home/udayakut/access-UK/zsh/zshrc .zshrc
+4. link ~/.zshrc to ~/access-UK/zsh/zshrc -> ln -s ~/access-UK/zsh/zshrc .zshrc
 
 5. cd ~/access-UK/git/
    curl https://github.com/git/git/raw/master/contrib/completion/git-completion.zsh -OL
@@ -21,8 +21,8 @@
     commands:
     ln -s ~/access-UK/vim/vimfiles/vundle_vimrc .vimrc;
     mkdir ~/access-UK/vim/vimbundle;
-    ln -s /home/udayakut/access-UK/vim/vimbundle .vim;
-    ln -s /home/udayakut/access-UK/zsh/zshrc.local .zshrc.local
+    ln -s ~/access-UK/vim/vimbundle .vim;
+    ln -s ~/access-UK/zsh/zshrc.local .zshrc.local
 
 
 7. Install autojump following instructions in the below webpage
