--- a/README
+++ b/README
@@ -67,21 +67,21 @@ ln -s ~/access-UK/bash/bash_profile ~/.bash_profile;
     cd ~/bin/; wget 'https://github.com/whiteinge/dotfiles/raw/master/bin/diffconflicts';
     chmod +x diffconflicts;
 
-14. Install mosh server by following the link - http://www.unixmen.com/mosh-a-brief-introduction/ 
+14. Install mosh server by following the link - http://www.unixmen.com/mosh-a-brief-introduction/
     First install epel by following step - "3.1 The easy method: (using yum)" and then do "sudo yum install mosh" as described in this link.
 
 15. Make sure the executable scripts has "+x" permission in ~/access-UK/alu/ and ~/access-UK/bin
 
-16. fzf: Install fzf from https://github.com/junegunn/fzf 
+16. fzf: Install fzf from https://github.com/junegunn/fzf
     a. cd ~/software; git clone --depth 1 https://github.com/junegunn/fzf.git; cd fzf; ./install
-    b. ln -s ~/software/fzf .fzf 
+    b. ln -s ~/software/fzf .fzf
     c. After installing fzf, make sure this installation has not modified my ~/.bashrc and ~/.zshrc. My git hub bashrc.local and zshrc.local already should have these changes.
     d. mkdir ~/tmuxbuffer/; touch ~/tmuxbuffer/resultcmdsh;
-    e. sudo yum install inotify-tools 
+    e. sudo yum install inotify-tools
     Below info comes from my dot files present in my git repo. No need to do anything for points 1-3.
     1. vundle_vimrc: Contains changes to gG/gA to fzf functions and structures (right side of vim screen). When selected, it opens the function/struct in cscope
     2. tmux.conf: tmux-esc-charac-y - will pull out ctrl-r kind of window at the bottom and shows all the tags from Txt files / my cheat sheets
-    3. bashrc.local_for_zsh - cmdsh,cmdsh2ndpart -   Files that needs to be indexed by fzf (tmux) is present in ~/Docs-UK/ALU-2/txtfiles.txt. These two functions cat's all these
+    3. bashrc.local_for_zsh - cmdsh,cmdsh2ndpart -   Files that needs to be indexed by fzf (tmux) is present in ~/Docs-UK/Versa/txtfiles.txt. These two functions cat's all these
                               files and invokes fzf-tmux by giving the cat'ed file as input.
 17. Install free dns (noip.com). Refer the README from access-UK/others/noipupdate/
 18. Installed Unite.vim plugin. This inturn requires Plugin 'Shougo/vimproc.vim' for unite source "file_rec/async" to work.  Inorder for vimproc to work you need to do a make by doing :VimProcInstall in VIM window.
