--- a/README
+++ b/README
@@ -28,7 +28,7 @@ ln -s ~/access-UK/bash/aliases_bash .aliases_bash;
 ln -s ~/access-UK/bash/bash_profile ~/.bash_profile;
 
 3. Install zsh. Follow access-UK/zsh/README
-   ln -s ~/access-UK/zsh/zshrc .zshrc;ln -s ~/access-UK/zsh/zshrc.local .zshrc.local;
+   ln -s ~/access-UK/zsh/zshrc ~/.zshrc;ln -s ~/access-UK/zsh/zshrc.local ~/.zshrc.local;
 
 4. ln -s ~/access-UK/others/netrc .netrc; ln -s ~/access-UK/others/screenrc .screenrc; ln -s ~/access-UK/others/inputrc .inputrc; ln -s ~/access-UK/gdb/gdbinit .gdbinit; 
 
