--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-1. ln -s ~/access-UK/vim/vimfiles/vundle_vimrc .vimrc; 
-   mkdir ~/access-UK/vim/vimbundle; 
-   ln -s ~/access-UK/vim/vimbundle .vim; 
+1. ln -s ~/access-UK/vim/vimfiles/vundle_vimrc .vimrc;
+   mkdir ~/access-UK/vim/vimbundle;
+   ln -s ~/access-UK/vim/vimbundle .vim;
    git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim;
    Then open vim and give :PluginInstall
 
@@ -10,34 +10,34 @@
    a. go to ~/.vim/bundle/buffexlorer/plugin. Do git apply ~/access-UK/vim/vim_bundle_bufexplorer.diff
    b. Also, i see that the latest bufexlorer plugin does not work with VIM version < 7.3. Get older version tag and checkout that version.
       go to ~/.vim/bundle/bufexplorer. Do "git tag -l". Get a older version and do "git checkout <tag>"
-      As of now, i see v7.4.6 works with VIM 7.2 (beyond which it requires vim 7.3) and also this version already has the fix for the issue 
+      As of now, i see v7.4.6 works with VIM 7.2 (beyond which it requires vim 7.3) and also this version already has the fix for the issue
       i reported (so no need to do git apply step a)
 
    Option 2:
    a. Open ~/access-UK/vim/vimbundle/bundle/bufexplorer/plugin/bufexplorer.vim.
    b. search for s:MapKeys function implementation
    c. In that function, you can see several lines starting with "nnoremap <script> <silent> <nowait> <buffer> .."
-   d. Remove <nowait> from all these lines. Just change it to "nnoremap <script> <silent> <buffer>..." 
+   d. Remove <nowait> from all these lines. Just change it to "nnoremap <script> <silent> <buffer>..."
    e. Close the files in VIM if you have oppened it. Reopen those files and you will see the issue is gone :-)
 
 2. Issue following commands
 ln -s ~/access-UK/bash/bashrc .bashrc;
-ln -s ~/access-UK/bash/bashrc.local .bashrc.local; 
-ln -s ~/access-UK/bash/bash_profile .bash_profile; 
-ln -s ~/access-UK/bash/aliases_bash .aliases_bash; 
+ln -s ~/access-UK/bash/bashrc.local .bashrc.local;
+ln -s ~/access-UK/bash/bash_profile .bash_profile;
+ln -s ~/access-UK/bash/aliases_bash .aliases_bash;
 ln -s ~/access-UK/bash/bash_profile ~/.bash_profile;
 
 3. Install zsh. Follow access-UK/zsh/README
    ln -s ~/access-UK/zsh/zshrc ~/.zshrc;ln -s ~/access-UK/zsh/zshrc.local ~/.zshrc.local;
 
-4. ln -s ~/access-UK/others/netrc .netrc; ln -s ~/access-UK/others/screenrc .screenrc; ln -s ~/access-UK/others/inputrc .inputrc; ln -s ~/access-UK/gdb/gdbinit .gdbinit; 
+4. ln -s ~/access-UK/others/netrc .netrc; ln -s ~/access-UK/others/screenrc .screenrc; ln -s ~/access-UK/others/inputrc .inputrc; ln -s ~/access-UK/gdb/gdbinit .gdbinit;
 
 5. ln -s ~/access-UK/git/gitconfig .gitconfig; ln -s ~/access-UK/git/git-prompt.sh .git-prompt.sh; ln -s ~/access-UK/bin/git ~/bin/git
 
 6. Download and install tmux: Follow instructions in https://gist.github.com/rothgar/cecfbd74597cc35a6018
-   ln -s ~/access-UK/tmux/tmux.conf ~/.tmux.conf 
+   ln -s ~/access-UK/tmux/tmux.conf ~/.tmux.conf
 
-7. Clone Docs-UK. cd; https://gitlab.com/shaakaud/Docs-UK.git; 
+7. Clone Docs-UK. cd; https://gitlab.com/shaakaud/Docs-UK.git;
 
 8. Downnload solarized color scheme for Gnome terminal
    http://www.webupd8.org/2011/04/solarized-must-have-color-paletter-for.html
@@ -47,7 +47,7 @@ ln -s ~/access-UK/bash/bash_profile ~/.bash_profile;
    ./set_dark.sh
    cd ~/software; git clone https://github.com/seebi/dircolors-solarized
 
-9. Install for percol - This is for improved ctrl-r (searching history) - follow https://github.com/mooz/percol/blob/master/README.md#zsh-history-search 
+9. Install for percol - This is for improved ctrl-r (searching history) - follow https://github.com/mooz/percol/blob/master/README.md#zsh-history-search
    cd ~/software/; git clone https://github.com/mooz/percol.git; cd percol;sudo python setup.py install;
 
 10. Install xsel - To make ctl-c to copy to clipboard on tmux window
@@ -57,7 +57,7 @@ ln -s ~/access-UK/bash/bash_profile ~/.bash_profile;
    sudo yum install asciidoc
 
 12. a) sudo yum install xsel
-    b) Install Parcellite - Clip board manager - This will help to copy contents to clipboard when we vnc to centos machine from windows m/c and copy some contents to clipboard 
+    b) Install Parcellite - Clip board manager - This will help to copy contents to clipboard when we vnc to centos machine from windows m/c and copy some contents to clipboard
     and try to paste it to windows m/c.
     Download from http://parcellite.sourceforge.net/. Copy the *.tar.gz file to ~/software/ and untar it tar -xvf parcellite-*.tar.gz
     Follow the instructions in README for installation.
@@ -111,6 +111,14 @@ ln -s ~/access-UK/bash/bash_profile ~/.bash_profile;
     from windows - win-r -> \\ukhost2.ddns.net\bkup
 23. If you want to install python, https://www.anaconda.com/distribution/
     If you want python IDE, download pycharm - https://www.jetbrains.com/pycharm/download/#section=linux
+24. To export DISPLAY of a linux server to Windows machin - https://seanthegeek.net/234/graphical-linux-applications-bash-ubuntu-windows/
+    1. Install ubuntu in windows
+    2. In bash run: echo "export DISPLAY=localhost:0.0" >> ~/.bashrc
+    3. source ~/.bashrc
+    4. Install x11-apps -> sudo apt-get install x11-apps
+    5. Running remote GUI application over ssh - ssh -X udaytj@ukdev.ddns.net
+       Now run the GUI application on that ssh prompt. The GUI display will be
+       exported to Windows machine.
 
 
 
@@ -135,7 +143,7 @@ lrwxrwxrwx  1 udayakut udayakut     40 Sep  1 13:58 .zshrc.local -> /home/udayak
 lrwxrwxrwx  1 udayakut udayakut     30 Sep 24 14:11 .bashrc -> /drive_c/access-UK/bash/bashrc*
 lrwxrwxrwx  1 udayakut udayakut     36 Sep 24 14:11 .bashrc.local -> /drive_c/access-UK/bash/bashrc.local*
 lrwxrwxrwx  1 udayakut udayakut     38 Sep 28 16:27 .gitconfig -> /home/udayakut/access-UK/git/gitconfig*
-? ~ =>$ 
+? ~ =>$
 
 Verify (ALU related mostly):
 ? bin =>$ ls -lart
@@ -153,15 +161,15 @@ lrwxrwxrwx  1 udayakut udayakut   55 Nov  6 14:46 load_to_testbed.py -> /home/ud
 lrwxrwxrwx  1 udayakut udayakut   36 Feb  5 14:15 bkup.sh -> /home/udayakut/access-UK/bin/bkup.sh*
 drwxrwxr-x  4 udayakut udayakut 4096 Feb  5 14:15 ./
 drwx------ 54 udayakut udayakut 4096 Feb 12 10:05 ../
-? bin =>$ 
-? bin =>$ cd queen2-related 
+? bin =>$
+? bin =>$ cd queen2-related
 ? queen2-related =>$ ls -lart
 total 12
 lrwxrwxrwx 1 udayakut udayakut   52 Feb 12  2015 ftpxfer.sh -> /drive_c/home/udayakut/bin/queen2-related/ftpxfer.sh
 lrwxrwxrwx 1 udayakut udayakut   63 Feb 12  2015 upload.queen2.newHire -> /drive_c/home/udayakut/bin/queen2-related/upload.queen2.newHire
 drwxrwxr-x 2 udayakut udayakut 4096 Feb 12  2015 ./
 drwxrwxr-x 4 udayakut udayakut 4096 Feb  5 14:15 ../
-? queen2-related =>$ 
+? queen2-related =>$
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 To do some keyboard shortcuts:
