--- a/README
+++ b/README
@@ -80,7 +80,7 @@ ln -s ~/access-UK/bash/bash_profile ~/.bash_profile;
     e. sudo yum install inotify-tools
     Below info comes from my dot files present in my git repo. No need to do anything for points 1-3.
     1. vundle_vimrc: Contains changes to gG/gA to fzf functions and structures (right side of vim screen). When selected, it opens the function/struct in cscope
-    2. tmux.conf: tmux-esc-charac-y - will pull out ctrl-r kind of window at the bottom and shows all the tags from Txt files / my cheat sheets
+    2. tmux.conf: tmux-esc-charac-y - will pull out ctrl-r kind of window at the bottom and shows all the tags from Txt files / my cheat sheets ( ~/Docs-UK/Versa/txtfiles.txt)
     3. bashrc.local_for_zsh - cmdsh,cmdsh2ndpart -   Files that needs to be indexed by fzf (tmux) is present in ~/Docs-UK/Versa/txtfiles.txt. These two functions cat's all these
                               files and invokes fzf-tmux by giving the cat'ed file as input.
 17. Install free dns (noip.com). Refer the README from access-UK/others/noipupdate/
