--- a/vnc/README
+++ b/vnc/README
@@ -21,4 +21,8 @@ sudo apt-get install autocutsel
 autocutsel -s PRIMARY -fork <== This is added to .vnc/xstartup
 
 
-
+ubuntu 18.04 - bionic:
+=======================
+Xfce desktop environment
+~~~~~~~~~~~~~~~~~~~~~~~
+https://www.digitalocean.com/community/tutorials/how-to-install-and-configure-vnc-on-ubuntu-18-04
