--- a/zsh/README
+++ b/zsh/README
@@ -6,10 +6,10 @@
 
 4. link ~/.zshrc to ~/access-UK/zsh/zshrc -> ln -s ~/access-UK/zsh/zshrc .zshrc
 
-5. cd ~/access-UK/git/
+5. cd ~/software
    curl https://github.com/git/git/raw/master/contrib/completion/git-completion.zsh -OL
    cd ~/
-   ln -s ~/access-UK/git/git-completion.zsh git-completion.zsh
+   ln -s ~//git-completion.zsh git-completion.zsh
 
 6. ln -s ~/access-UK/zsh/zshrc.local .zshrc.local
 
