--- a/README
+++ b/README
@@ -48,6 +48,14 @@ ln -s ~/access-UK/bin/ ~/bin
    ubuntu:sudo apt install tmux
    ln -s ~/access-UK/tmux/tmux.conf ~/.tmux.conf
 
+   #To save tmux sessions to survive reboots
+   #1. Install tmux plugin manager -  https://github.com/tmux-plugins/tpm
+       - $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+   #2. All required tmux plugins (tmux-resurrect, tmux-continuum) are already present in ~/access-UK/tmux/tmux.conf. No need to add any plugins.
+   #3. If you are going to start first tmux session now only, then tmux.conf will get sourced automatically. Otherwise - tmux source ~/.tmux.conf
+   #4. If you add new plugins in tmux.conf, and if tmux is already running, then inside tmux, Press prefix + I (capital i, as in Install) to fetch the plugin.
+   #5. ******All the stored tmux environments are stored in ~/.tmux/resurrect/
+
 7. Clone Docs-UK. cd; https://gitlab.com/shaakaud/Docs-UK.git;
 
 8. Downnload solarized color scheme for Gnome terminal
@@ -127,6 +135,10 @@ ln -s ~/access-UK/bin/ ~/bin
     Here give the username should be Computer name\username eg. 10.40.40.101\udaytj (udaytj is the username
     created in the samba server_and then password (samba password created in the samba server ie 10.40.40.101).
 24. Install vncserver - https://www.digitalocean.com/community/tutorials/how-to-install-and-configure-vnc-on-ubuntu-18-04
+    Issue: In the xfce vncclient, if you are not able to launch terminal, then follow below workaround.
+    Solution: sudo apt remove xfce4 xfce4-goodies
+              sudo apt remove tightvncserver
+              Now reinstall again as described in above link.
 23. If you want to install python, https://www.anaconda.com/distribution/
     If you want python IDE, download pycharm - https://www.jetbrains.com/pycharm/download/#section=linux
 24. To export DISPLAY of a linux server to Windows machin - https://seanthegeek.net/234/graphical-linux-applications-bash-ubuntu-windows/
