--- a/README
+++ b/README
@@ -5,7 +5,7 @@
    - Go to SSH and GPG keys
    - Create a new SSH key for the machine from where you are going to do git clone.
      Enter the .ssh/id_rsa.pub that you copied above
-   - Now try to do git clone git@github.com:shaakaud/access-UK.git
+   - Now try to do git clone git@github.com:shaakaud/access-UK.git or any git operations under access-UK repo.
 1. ln -s ~/access-UK/vim/vimfiles/vundle_vimrc .vimrc;
    mkdir ~/access-UK/vim/vimbundle;
    ln -s ~/access-UK/vim/vimbundle .vim;
